--- a/TalkApp/Base.lproj/Main.storyboard
+++ b/TalkApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ppY-Is-vm4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="KbL-6z-FFu">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--친구-->
+        <!--Friends Selection View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="FriendsSelectionViewController" customModule="TalkApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -18,31 +18,12 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="친구" image="person.fill" catalog="system" selectedImage="person.fill" id="vkA-KR-wcV"/>
                     <navigationItem key="navigationItem" id="sCl-l3-uWq"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1856" y="-557"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="iWZ-Zt-lEh">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ppY-Is-vm4" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="SI5-0t-89d">
-                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="KbL-6z-FFu" kind="relationship" relationship="rootViewController" id="YEC-fZ-WpI"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="mDe-5h-1uU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="26.717557251908396" y="-27.464788732394368"/>
+            <point key="canvasLocation" x="2782.4427480916029" y="-557.04225352112678"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="I9E-qH-zya">
@@ -56,16 +37,16 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="kPU-Go-fkx"/>
-                        <segue destination="Wl5-Xs-9IJ" kind="relationship" relationship="viewControllers" id="JR9-NM-qdn"/>
-                        <segue destination="Tba-jj-f65" kind="relationship" relationship="viewControllers" id="2lt-uf-UQE"/>
+                        <segue destination="mbr-Ee-PeU" kind="relationship" relationship="viewControllers" id="kPU-Go-fkx"/>
+                        <segue destination="1Xa-k5-28f" kind="relationship" relationship="viewControllers" id="JR9-NM-qdn"/>
+                        <segue destination="KLT-xc-81h" kind="relationship" relationship="viewControllers" id="2lt-uf-UQE"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NUM-rn-F4T" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="953.43511450381675" y="-27.464788732394368"/>
+            <point key="canvasLocation" x="367" y="-42"/>
         </scene>
-        <!--채팅-->
+        <!--Chat Room View Controller-->
         <scene sceneID="h6t-dI-saK">
             <objects>
                 <viewController id="Wl5-Xs-9IJ" customClass="ChatRoomViewController" customModule="TalkApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -75,13 +56,13 @@
                         <viewLayoutGuide key="safeArea" id="1bS-7u-BWr"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="채팅" image="message.fill" catalog="system" selectedImage="message.fill" id="pBo-sQ-Pwk"/>
+                    <navigationItem key="navigationItem" id="mwq-cl-mbb"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pZb-Na-2xm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1856" y="137"/>
+            <point key="canvasLocation" x="2782.4427480916029" y="136.61971830985917"/>
         </scene>
-        <!--설정-->
+        <!--Setting View Controller-->
         <scene sceneID="zgE-Jc-Q0k">
             <objects>
                 <viewController id="Tba-jj-f65" customClass="SettingViewController" customModule="TalkApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -91,11 +72,68 @@
                         <viewLayoutGuide key="safeArea" id="UW9-62-evu"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="설정" image="gearshape.fill" catalog="system" selectedImage="gearshape.fill" id="n52-qV-pcL"/>
+                    <navigationItem key="navigationItem" id="bbS-4e-5tM"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="foF-IS-EET" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1856" y="901"/>
+            <point key="canvasLocation" x="2782.4427480916029" y="900.70422535211276"/>
+        </scene>
+        <!--친구-->
+        <scene sceneID="jcj-zM-gM7">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="mbr-Ee-PeU" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="친구" image="person.fill" catalog="system" selectedImage="person.fill" id="vkA-KR-wcV"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="cbc-w3-bqZ">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="QuO-dM-GzZ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3E3-gE-CQ1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1855.7251908396945" y="-557.04225352112678"/>
+        </scene>
+        <!--채팅-->
+        <scene sceneID="ce3-O7-ZLB">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1Xa-k5-28f" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="채팅" image="message.fill" catalog="system" selectedImage="message.fill" id="pBo-sQ-Pwk"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="pMc-Kw-2ho">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Wl5-Xs-9IJ" kind="relationship" relationship="rootViewController" id="PZW-nv-OWi"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bH6-Hr-kVO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1855.7251908396945" y="136.61971830985917"/>
+        </scene>
+        <!--설정-->
+        <scene sceneID="pPv-cL-kUX">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="KLT-xc-81h" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="설정" image="gearshape.fill" catalog="system" selectedImage="gearshape.fill" id="n52-qV-pcL"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="VKQ-v2-1jg">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Tba-jj-f65" kind="relationship" relationship="rootViewController" id="QVN-Z2-epn"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ft8-KY-iQN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1855.7251908396945" y="900.70422535211276"/>
         </scene>
     </scenes>
     <resources>
